<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/appDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valentineapp_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/hisHerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/appDescription"
        android:layout_below="@+id/appDescription"
        android:ems="10"
        android:hint="@string/your_name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/yourName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hisHerName"
        android:layout_below="@+id/hisHerName"
        android:ems="10"
        android:hint="@string/his_her_name" />

    <TextView
        android:id="@+id/dateMeetDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/yourName"
        android:layout_below="@+id/yourName"
        android:layout_marginTop="14dp"
        android:text="@string/date_meet"
        android:textAppearance="?android:attr/textAppearanceSmall" />
   
    <DatePicker
        android:id="@+id/dateMeet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateMeetDescription"
        android:layout_centerHorizontal="true"
        android:calendarViewShown="false" />
     
    <Button
        android:id="@+id/buttonLoadPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateMeet"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/load_picture" />

</RelativeLayout>